Updated styles and readme

--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
              </div>
              <div class="navbar-end">
                <div class="navbar-item rightNavHide">
-                <p class="title is-7" id="streamerTextPost">PRIME</p>
+                <p class="title is-7" id="sidTextPost">PRIME</p>
                </div>
-                <div class="navbar-item rightNavHide">
-                 <p class="title is-7" id="streamerTextPost">ALERTS</p>
+                <div id="sidTextPost"class="navbar-item rightNavHide">
+                 <p class="title is-7" id="sidTextPost">ALERTS</p>
                </div>
              <div class="navbar-item lastItem">
                <div class="dropdown is-hoverable userInfoWidth" >
@@ -107,8 +107,8 @@
                            <div class="downArrow">
                              v
                            </div>
-                            <p class="title is-7" id="streamerTextPost">Streamer Name</p>
-                            <p class="subtitle is-6" id="streamerTextPost">Online</p>
+                            <p class="title is-7" id="sidTextPost">Streamer Name</p>
+                            <p class="subtitle is-6" id="sidTextPost">Online</p>
                          </div>
                        </button>
                      </div>
@@ -158,8 +158,8 @@
               <div id="streamerLeftNavName" class="subtitle posterName">
                 <div class="media-content">
 
-                   <p class="title is-7" id="streamerTextPost">Streamer Name</p>
-                   <p class="subtitle is-6" id="streamerTextPost">
+                   <p class="title is-7" id="sidTextPost">Streamer Name</p>
+                   <p class="subtitle is-6" id="sidTextPost">
                      Game Playing
                      <span class="leftNavViewerCount">
                       viewer count
@@ -174,8 +174,8 @@
               <div id="streamerLeftNavName" class="subtitle posterName">
                 <div class="media-content">
 
-                   <p class="title is-7" id="streamerTextPost">Streamer Name</p>
-                   <p class="subtitle is-6" id="streamerTextPost">
+                   <p class="title is-7" id="sidTextPost">Streamer Name</p>
+                   <p class="subtitle is-6" id="sidTextPost">
                      Game Playing
                      <span class="leftNavViewerCount">
                       viewer count
@@ -190,8 +190,8 @@
               <div id="streamerLeftNavName" class="subtitle posterName">
                 <div class="media-content">
 
-                   <p class="title is-7" id="streamerTextPost">Streamer Name</p>
-                   <p class="subtitle is-6" id="streamerTextPost">
+                   <p class="title is-7" id="sidTextPost">Streamer Name</p>
+                   <p class="subtitle is-6" id="sidTextPost">
                      Game Playing
                      <span class="leftNavViewerCount">
                       viewer count
@@ -206,8 +206,8 @@
               <div id="streamerLeftNavName" class="subtitle posterName">
                 <div class="media-content">
 
-                   <p class="title is-7" id="streamerTextPost">Streamer Name</p>
-                   <p class="subtitle is-6" id="streamerTextPost">
+                   <p class="title is-7" id="sidTextPost">Streamer Name</p>
+                   <p class="subtitle is-6" id="sidTextPost">
                      Game Playing
                      <span class="leftNavViewerCount">
                       viewer count
@@ -222,8 +222,8 @@
               <div id="streamerLeftNavName" class="subtitle posterName">
                 <div class="media-content">
 
-                   <p class="title is-7" id="streamerTextPost">Streamer Name</p>
-                   <p class="subtitle is-6" id="streamerTextPost">
+                   <p class="title is-7" id="sidTextPost">Streamer Name</p>
+                   <p class="subtitle is-6" id="sidTextPost">
                      Game Playing
                      <span class="leftNavViewerCount">
                       viewer count
@@ -238,8 +238,8 @@
               <div id="streamerLeftNavName" class="subtitle posterName">
                 <div class="media-content">
 
-                   <p class="title is-7" id="streamerTextPost">Streamer Name</p>
-                   <p class="subtitle is-6" id="streamerTextPost">
+                   <p class="title is-7" id="sidTextPost">Streamer Name</p>
+                   <p class="subtitle is-6" id="sidTextPost">
                      Game Playing
                      <span class="leftNavViewerCount">
                       viewer count
@@ -248,17 +248,17 @@
                 </div>
               </div>
             </div>
-            <p class="subtitle is-6 friendListText leftNavHide" id="streamerTextPost">
+            <p class="subtitle is-6 friendListText leftNavHide" id="sidTextPost">
               Online Friends
             </p>
             <hr id="hr">
             <img class="leftNavHide" src="https://cdn0.iconfinder.com/data/icons/iphone-black-people-svg-icons/30/clients_client_user_male_earth_man_list_customer_windows-512.png" alt="">
 
-            <p class="subtitle is-6 friendText leftNavHide" id="streamerTextPost">
+            <p class="subtitle is-6 friendText leftNavHide" id="sidTextPost">
               None of your friends appear to be online
             </p>
             <p class="control leftSearch">
-               <input class="input" id="input" type="text" placeholder="Search to Add Friends">
+               <input class="input leftNavInput" id="input" type="text" placeholder="Search to Add Friends">
             </p>
          </div>
          <!-- this column takes up the remainding space that the side nav isnt -->
