--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                <div class="dropdown is-hoverable userInfoWidth" >
                 <div class="dropdown-trigger userInfoWidth">
                   <button class="button userInfoWidth" id="drpDown" aria-haspopup="true" aria-controls="dropdown-menu">
-                         <img id="streamerImage" src="https://static-cdn.jtvnw.net/jtv_user_pictures/39594051-65fb-4750-b560-16702c87b1ae-profile_image-70x70.png" alt="">
+                         <img id="streamerImage" class="userProfile"src="https://static-cdn.jtvnw.net/jtv_user_pictures/39594051-65fb-4750-b560-16702c87b1ae-profile_image-70x70.png" alt="">
                            <div class="media-content userInfo">
                            <div class="downArrow">
                              v
