dropdown z index fixed

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
              </div>
              <div class="navbar-end">
                <div class="navbar-item rightNavHide">
-                <p class="title is-7" id="sidTextPost">PRIME</p>
+                <p class="title is-7 primeIndex" id="sidTextPost">PRIME</p>
                </div>
                 <div id="sidTextPost"class="navbar-item rightNavHide">
                  <p class="title is-7" id="sidTextPost">ALERTS</p>
